[package]
name = "nfc"
version = "0.1.9"
authors = ["Daniel Griffin <danielseangriffin@gmail.com>"]
description = "Rust bindings for the libnfc library"
documentation = "https://github.com/dsgriffin/nfc"
homepage = "https://github.com/dsgriffin/nfc"
repository = "https://github.com/dsgriffin/nfc"
readme = "README.md"
keywords = ["device", "communication"]
license = "MIT"

[dependencies]
libc = "0.2.0"
nfc-sys = "0.1.3"